[package]
name = "packageinfo"
version = "0.1.0"
authors = ["ankolaver <47784720+ankolaver@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4.0", features = ["full"] }
colored = "2.0.0"
chrono = "0.4.19"
scraper = "0.12.0"
reqwest = { version = "0.11", features = ["blocking"] }